--- a/packages/taro-ui-demo/src/pages/basic/color/index.scss
+++ b/packages/taro-ui-demo/src/pages/basic/color/index.scss
@@ -1,5 +1,6 @@
 .color-list {
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
@@ -9,16 +10,17 @@
   margin-bottom: 40px;
   width: 33%;
   text-align: center;
+  align-items: center;
 
   &__circle {
     position: relative;
     margin: 0 auto;
     width: 150px;
     height: 150px;
-    background: #78A4FA;
-    border-radius: 50%;
+    background: hsl(220, 93%, 73%);
+    border-radius: 75px;
 
-    .inner-circle-1 {
+    &--inner-circle-1 {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -26,11 +28,11 @@
       margin-top: -50px;
       width: 100px;
       height: 100px;
-      background: #fff;
-      border-radius: 50%;
+      background: #ffffff;
+      border-radius: 50px;
     }
 
-    .inner-circle-2 {
+    &--inner-circle-2 {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -39,7 +41,7 @@
       width: 64px;
       height: 64px;
       border: 1px solid #78A4FA;
-      border-radius: 50%;
+      border-radius: 32px;
       opacity: 0.3;
     }
   }
@@ -49,10 +51,12 @@
     color: #88889C;
     font-size: 20px;
     text-align: center;
+    align-items: center;
 
-    .name,
-    .hex {
-      display: block;
+    &--name,
+    &--hex {
+      display: flex;
+      flex-direction: row;
     }
   }
 }
