--- a/packages/taro-ui-demo/src/pages/index/index.scss
+++ b/packages/taro-ui-demo/src/pages/index/index.scss
@@ -11,13 +11,13 @@
   padding-top: 60px;
   padding-bottom: 100px;
 
-  .logo {
+  &__logo {
     margin: 0 auto;
     margin-top: 60px;
     font-size: 0;
     text-align: center;
 
-    .img {
+    &--img {
       width: 264px;
       height: 180px;
     }
@@ -49,7 +49,7 @@
       box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.04);
       border-radius: 10px;
 
-      &:last-child {
+      &--last {
         margin-bottom: 0;
       }
     }
@@ -65,7 +65,7 @@
       border: 5px solid rgba(120, 164, 250, 0.16);
       border-radius: 50%;
 
-      .img {
+      &--img {
         width: 30px;
         height: 30px;
       }
