--- a/packages/taro-ui-demo/src/pages/panel/index.scss
+++ b/packages/taro-ui-demo/src/pages/panel/index.scss
@@ -1,11 +1,12 @@
-@import '~taro-ui/dist/style/mixins/index.scss';
-@import '~taro-ui/dist/style/variables/default.scss';
+@import '~/taro-ui/dist/style/mixins/index.scss';
+@import '~/taro-ui/dist/style/variables/default.scss';
 
 /**
  * 分类页样式
  */
 .panel-header {
   display: flex;
+  flex-direction: row;
   align-items: center;
   padding: 60px;
   height: 180px;
@@ -19,10 +20,12 @@
     color: #78A4FA;
     text-align: center;
     background: #fff;
+    /*  #ifndef  rn  */
     box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.11);
+    /*  #endif  */
     border-radius: 10px;
 
-    .img {
+    &--img {
       width: 36px;
       height: 36px;
     }
@@ -37,9 +40,14 @@
 }
 
 .panel-body {
-  min-height: calc(100vh - 180px);
   background: #fff;
+  /*  #ifndef  rn  */
+  min-height: calc(100vh - 180px);
   box-shadow: 0 26px 163px 0 rgba(0, 0, 0, 0.11);
+  /*  #endif  */
+  /*  #ifdef  rn  */
+  flex: 1;
+  /*  #endif  */
 }
 
 .component-list {
@@ -47,18 +55,25 @@
 
   &__item {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     height: 120px;
+    /*  #ifndef  rn  */
     @include hairline-bottom();
+    /*  #endif  */
+    /*  #ifdef  rn  */
+    border-bottom-width: 1px;
+    border-bottom-color: $color-border-light;
+    /*  #endif  */
 
-    .name {
+    &--name {
       color: #1d1d26;
       font-size: 28px;
     }
 
-    .at-icon {
-      color: #CCC;
-    }
+    // .at-icon {
+    //   color: #CCC;
+    // }
   }
 }
