--- a/packages/taro-ui/src/style/components/noticebar.scss
+++ b/packages/taro-ui/src/style/components/noticebar.scss
@@ -54,23 +54,23 @@
   }
 
   &__more {
-    color: $color-grey-2;
+    // color: $color-grey-2;
     font-size: 0;
 
     .text {
-      font-size: $at-noticebar-font-size;
-      line-height: $line-height-zh;
+      // font-size: $at-noticebar-font-size;
+      // line-height: $line-height-zh;
       vertical-align: middle;
     }
 
     &-icon {
       display: inline-block;
-      width: $at-noticebar-font-size;
+      // width: $at-noticebar-font-size;
       vertical-align: middle;
       overflow: hidden;
 
       .at-icon {
-        font-size: $at-noticebar-font-size;
+        // font-size: $at-noticebar-font-size;
       }
     }
   }
