--- a/packages/taro-ui/src/style/components/search-bar.scss
+++ b/packages/taro-ui/src/style/components/search-bar.scss
@@ -6,9 +6,9 @@ $at-search-bar-input-height: 30PX;
 $at-search-bar-input-padding: 25PX;
 $at-search-bar-btn-padding: 10PX;
 $at-search-bar-placeholder-padding: 12PX;
-$at-search-bar-input-bg-color: $color-bg-grey;
-$at-search-bar-input-color: $color-black-0;
-$at-search-bar-placholder-color: $color-grey-2;
+// $at-search-bar-input-bg-color: $color-bg-grey;
+// $at-search-bar-input-color: $color-black-0;
+// $at-search-bar-placholder-color: $color-grey-2;
 
 .at-search-bar {
   display: flex;
@@ -24,9 +24,9 @@ $at-search-bar-placholder-color: $color-grey-2;
     position: relative;
     flex: 1;
     width: 100%;
-    height: $at-search-bar-input-height;
-    background-color: $at-search-bar-input-bg-color;
-    border-radius: $at-search-bar-input-height / 2;
+    // height: $at-search-bar-input-height;
+    // background-color: $at-search-bar-input-bg-color;
+    // border-radius: $at-search-bar-input-height / 2;
     overflow: hidden;
     display: flex;
   }
