--- a/packages/taro-ui/src/style/components/noticebar.scss
+++ b/packages/taro-ui/src/style/components/noticebar.scss
@@ -70,7 +70,7 @@
       overflow: hidden;
 
       .at-icon {
-        // font-size: $at-noticebar-font-size;
+        font-size: $at-noticebar-font-size;
       }
     }
   }
