--- a/packages/taro-ui-demo/src/app.scss
+++ b/packages/taro-ui-demo/src/app.scss
@@ -1,19 +1,8 @@
 // @import "~taro-ui/dist/style/index.scss";
+@import "~/taro-ui/dist/style/variables/default.scss";
 
+/*  #ifndef  rn  */
 #app {
-  background-color: #f8f8f8;
-}
-
-.at-frozen {
-  position: fixed;
-  width: 100%;
-}
-
-.page {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  min-height: 100vh;
   background-color: #f8f8f8;
 }
 
@@ -21,22 +10,56 @@ view {
   box-sizing: border-box;
 }
 
+/*  #endif  */
+
+.at-frozen {
+  /*  #ifndef  rn  */
+  position: fixed;
+  /*  #endif  */
+  /*  #ifdef  rn  */
+  position: absolute;
+  /*  #endif  */
+  width: 100%;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  /*  #ifndef  rn  */
+  box-sizing: border-box;
+  min-height: 100vh;
+  /*  #endif  */
+  /*  #ifdef  rn  */
+  flex: 1;
+  /*  #endif  */
+  background-color: #f8f8f8;
+}
+
+
+
+
 // 实例模板
 .example {
   padding: 10px 20px;
   margin-bottom: 10px;
 
+  /*  #ifndef  rn  */
   &:not(:first-child) {
     border-top: 40px solid #f5f5f5;
   }
 
+  /*  #endif  */
+
+
   &__header {
     margin-bottom: 20px;
     padding-bottom: 10px;
-    // border-bottom: 1px solid $color-grey-4;
+    border-style: solid;
+    border-bottom-color: $color-grey-4;
+    border-bottom-width: 1px;
 
     &-title {
-      // color: $color-grey-2;
+      color: $color-grey-2;
       font-size: 28px;
     }
 
@@ -52,15 +75,20 @@ view {
  * Example 样式
  */
 .panel__content {
-  .example-item {
+  &--example-item {
     margin-bottom: 20px;
 
+    /*  #ifndef  rn  */
     &:last-child {
       margin-bottom: 0;
     }
 
-    .subitem {
+    /*  #endif  */
+
+    &--subitem {
+       /*  #ifndef  rn  */
       display: inline-block;
+        /*  #endif  */
       margin-left: 24px;
     }
 
@@ -73,46 +101,59 @@ view {
 }
 
 .doc-body {
+  /*  #ifndef  rn  */
   min-height: calc(100vh - 180px);
-  background: #fff;
-  box-shadow: 0 26px 163px 0 rgba(0, 0, 0, 0.11);
-  padding-bottom: 60px;
   padding-bottom: calc(constant(safe-area-inset-bottom) + 60px);
   padding-bottom: calc(env(safe-area-inset-bottom) + 60px);
+  box-shadow: 0 26px 163px 0 rgba(0, 0, 0, 0.11);
+  /*  #endif  */
+  /*  #ifdef  rn  */
+  flex: 1;
+  /*  #endif  */
+  background: #fff;
+  padding-bottom: 60px;
 
-  .panel {
+
+  &--panel {
     margin: 32px 0 56px;
 
-    &__title {
-      position: relative;
-      margin-bottom: 50px;
-      padding-left: 50px;
-      color: #6a6a77;
-      font-size: 32px;
-      font-weight: bold;
-      line-height: 1.5;
 
-      &::before {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        left: 24px;
-        top: 50%;
-        margin-top: -20px;
-        width: 2PX;
-        height: 40px;
-        background-color: #6190e8;
-        box-shadow: 0 7px 12px 0 rgba(97, 144, 232, 0.2);
-        border-radius: 1PX;
-      }
-    }
 
     &__content {
       padding: 0 20px;
 
-      &.no-padding {
-        padding: 0;
-      }
     }
   }
+}
+
+.panel__title {
+  position: relative;
+  margin-bottom: 50px;
+  padding-left: 50px;
+  color: #6a6a77;
+  font-size: 32px;
+  font-weight: bold;
+
+  /*  #ifndef  rn  */
+  line-height: 1.5;
+
+  &::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    left: 24px;
+    top: 50%;
+    margin-top: -20px;
+    width: 2PX;
+    height: 40px;
+    background-color: #6190e8;
+    box-shadow: 0 7px 12px 0 rgba(97, 144, 232, 0.2);
+    border-radius: 1PX;
+  }
+
+  /*  #endif  */
+}
+
+.no-padding {
+  padding: 0;
 }
