--- a/packages/taro-ui/rn/style/components/action-sheet.scss
+++ b/packages/taro-ui/rn/style/components/action-sheet.scss
@@ -4,33 +4,33 @@
 $at-action-sheet-duration: 300ms;
 
 .at-action-sheet {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   z-index: $zindex-action-sheet;
-  visibility: hidden;
-  transition: visibility $at-action-sheet-duration $timing-func;
+  // visibility: hidden;
+  // transition: visibility $at-action-sheet-duration $timing-func;
 
   /* elements */
   &__overlay {
     @include overlay;
 
     opacity: 0;
-    transition: opacity $at-action-sheet-duration ease-in;
+    // transition: opacity $at-action-sheet-duration ease-in;
   }
 
   &__container {
     position: absolute;
-    padding-bottom: constant(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
+    // padding-bottom: constant(safe-area-inset-bottom);
+    // padding-bottom: env(safe-area-inset-bottom);
     bottom: 0;
     width: 100%;
     text-align: center;
     background-color: $color-white;
-    transform: translate3d(0, 100%, 0);
-    transition: transform $at-action-sheet-duration $timing-func;
+    // transform: translate3d(0, 100%, 0);
+    // transition: transform $at-action-sheet-duration $timing-func;
   }
 
   &__header {
@@ -38,15 +38,17 @@ $at-action-sheet-duration: 300ms;
     color: $color-black-3;
     font-size: $font-size-base;
     text-align: center;
-    line-height: $line-height-zh;
+    // line-height: $line-height-zh;
     @include hairline-bottom();
   }
 
   &__footer {
     padding: $spacing-v-lg $spacing-h-lg;
     font-size: $font-size-xl;
-    border-top: 12px solid rgba($color: $color-border-base, $alpha: 0.3);
-    @include active();
+    border-top-width: 12px;
+    border-style: solid;
+    border-top-color:  rgba($color: $color-border-base, $alpha: 0.3);
+    // @include active();
   }
 
   &__body {
@@ -56,21 +58,21 @@ $at-action-sheet-duration: 300ms;
   &__item {
     padding: $spacing-v-lg $spacing-h-lg;
     font-size: $font-size-xl;
-    @include active();
-    @include line(1);
+    // @include active();
+    // @include line(1);
     @include hairline-bottom-relative();
   }
 
   /* modifiers */
   &--active {
-    visibility: visible;
+    // visibility: visible;
 
     .at-action-sheet__overlay {
       opacity: 1;
     }
 
     .at-action-sheet__container {
-      transform: translate3d(0, 0, 0);
+      // transform: translate3d(0, 0, 0);
     }
   }
 }
