--- a/packages/taro-ui/rn/style/components/badge.scss
+++ b/packages/taro-ui/rn/style/components/badge.scss
@@ -5,10 +5,16 @@ $at-badge-border-radius: $at-badge-font-size * 0.7;
 $at-badge-box-shadow: 0 4px 8px 0 rgba($color: $at-badge-bg-color, $alpha: 0.2);
 
 .at-badge {
+  display: flex;
+  flex-direction: row;
   position: relative;
-  display: inline-block;
+  // display: inline-block;
   font-size: 0;
-  vertical-align: middle;
+  // vertical-align: middle;
+
+  &-wrap {
+    position: relative;
+  }
 
   /* elements */
   &__dot {
@@ -17,25 +23,34 @@ $at-badge-box-shadow: 0 4px 8px 0 rgba($color: $at-badge-bg-color, $alpha: 0.2);
     top: -6px;
     width: $at-badge-dot-size;
     height: $at-badge-dot-size;
-    border-radius: 50%;
+    border-radius: $at-badge-dot-size / 2;
     overflow: hidden;
     background: $at-badge-bg;
-    box-shadow: $at-badge-box-shadow;
+    // box-shadow: $at-badge-box-shadow;
   }
 
-  &__num {
+  &--wrap {
     position: absolute;
-    padding: 0 $spacing-h-sm;
     top: -$at-badge-border-radius;
     right: -6PX;
-    color: $at-badge-color;
-    font-size: $at-badge-font-size;
-    line-height: 1.4;
-    border-radius: $at-badge-border-radius $at-badge-border-radius $at-badge-border-radius 0;
-    background: $at-badge-bg;
-    box-shadow: $at-badge-box-shadow;
-    transform: translate(50%, 0);
-    overflow: hidden;
-    z-index: 1;
+    // box-shadow: $at-badge-box-shadow;
+
+    &__num {
+      position: relative;
+      left: 50%;
+      border-top-left-radius: $at-badge-border-radius;
+      border-top-right-radius: $at-badge-border-radius;
+      border-bottom-right-radius: $at-badge-border-radius;
+      overflow: hidden;
+      z-index: 1;
+
+      &__text {
+        padding: 0 $spacing-h-sm;
+        line-height: $at-badge-font-size * 1.4;
+        color: $at-badge-color;
+        font-size: $at-badge-font-size;
+        background: $at-badge-bg;
+      }
+    }
   }
 }
