--- a/packages/taro-ui/rn/style/components/curtain.scss
+++ b/packages/taro-ui/rn/style/components/curtain.scss
@@ -4,8 +4,7 @@
 $at-curtain-btn-size: 56px;
 
 .at-curtain {
-  display: block;
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -16,13 +15,10 @@ $at-curtain-btn-size: 56px;
   /* elements */
   &__container {
     display: flex;
-    position: relative;
     margin: 0 auto;
     width: 80%;
     height: 100%;
     justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
     opacity: 1;
   }
 
@@ -42,29 +38,32 @@ $at-curtain-btn-size: 56px;
     align-items: center;
     justify-content: center;
     border: 2PX solid $at-curtain-btn-color;
-    border-radius: 50%;
-    box-sizing: border-box;
+    border-radius: $at-curtain-btn-size / 2;
     z-index: $zindex-curtain;
 
-    &::before,
-    &::after {
-      content: '';
+    &--crossbar {
       position: absolute;
       top: 50%;
       left: 50%;
-      display: inline-block;
+    }
+
+    &--left-crossbar,
+    &--right-crossbar {
+      position: absolute;
+      left: -16px;
+      top: -1PX;
       width: 34px;
       height: 2PX;
       border-radius: 1PX;
       background: $at-curtain-btn-color;
     }
 
-    &::before {
-      transform: translate3d(-50%, -50%, 0) rotate(45deg);
+    &--left-crossbar {
+      transform: rotate(45deg);
     }
 
-    &::after {
-      transform: translate3d(-50%, -50%, 0) rotate(-45deg);
+    &--right-crossbar {
+      transform: rotate(-45deg);
     }
 
     &--top {
@@ -107,6 +106,6 @@ $at-curtain-btn-size: 56px;
 
   /* modifiers */
   &--closed {
-    visibility: hidden;
+    display: none;
   }
 }
